<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    //code
    <Toolbar
        android:id="@+id/toolbarLF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/backgroundtool"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="LOGIN"
            android:textStyle="bold"
            android:textColor="#ffff"
            android:textSize="20sp"
            android:layout_marginRight="15dp"
            android:textAlignment="center"
            />
    </Toolbar>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@id/toolbarLF"
        android:layout_centerHorizontal="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:layout_height="500dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:background="@drawable/layout_background">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="345dp"
                android:orientation="vertical">

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:id="@+id/emailLF"
                    android:drawableLeft="@drawable/ic_mail_outline_black_24dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:hint="Email-Address"
                    android:padding="10dp"
                    android:textSize="14sp"
                    android:textColorHint="#606060"
                    android:inputType="text"
                    android:layout_marginTop="40dp"
                    app:met_floatingLabel="highlight"/>

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
                    android:layout_marginEnd="20dp"
                    android:id="@+id/passwordLF"
                    android:layout_marginStart="20dp"
                    android:textSize="14sp"
                    android:drawablePadding="10dp"
                    android:hint="PASSWORD"
                    android:padding="10dp"
                    android:textColorHint="#606060"
                    android:inputType="textPassword"
                    app:met_floatingLabel="highlight"/>



                <ImageButton
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="end"
                    android:layout_marginTop="70dp"
                    android:layout_marginEnd="25dp"
                    android:id="@+id/signinLF"
                    android:src="@drawable/ic_arrow_forward_black_24dp"
                    android:background="@drawable/btn_background"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="50dp"
                    android:text="Don't have an Account"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/signupLF"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="40dp"
                    android:background="@drawable/btn_background"
                    android:text="SIGN UP"
                    android:textColor="@android:color/white" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>