...
            android:hint="Email"
            app:met_errorColor="#FF3A00"
            android:textSize="20dp"></com.rengwuxian.materialedittext.MaterialEditText>


        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/etUpdatePhone"
            android:layout_width="285dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="220dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="20dp"
            android:inputType="text"
            android:hint="PhoneNo"
            app:met_errorColor="#FF3A00"
            android:textSize="20dp"></com.rengwuxian.materialedittext.MaterialEditText>

        <Button
            android:id="@+id/btnUpdate"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="120dp"
            android:text="Update"
            android:textColor="#ffffff"
...
