<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="Home">
    </item>
    <item
        android:id="@+id/nav_favourites"
        android:icon="@drawable/ic_favorite_border_black_24dp"
        android:title="Favourites">
    </item>
    <item
        android:id="@+id/nav_History"
        android:icon="@drawable/ic_history_black_24dp"
        android:title="History">
    </item>
    <item
        android:id="@+id/nav_Account"
        android:icon="@drawable/ic_account_circle_black_24dp"
        android:title="Accounts">
    </item>

</menu>