<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".ui.AccountFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:padding="20sp"
        android:background="@drawable/background"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/almendra_sc"
            android:text="Your Information"
            android:textColor="@color/Black"
            android:textSize="24dp"></TextView>


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/profilelayout"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_marginTop="22dp"
        android:background="#E0DCDC">

        <ImageView
            android:id="@+id/profile"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="18dp"
            android:src="@drawable/ic_perm_identity_black_24dp"></ImageView>

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="18dp"
            android:layout_toRightOf="@+id/profile"
            android:fontFamily="@font/almendra_sc"
            android:text="Ashish Dongol"
            android:textColor="@color/Black"
            android:textSize="22dp"></TextView>

        <TextView
            android:id="@+id/PhoneNoP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/username"
            android:layout_centerVertical="true"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="8dp"
            android:layout_toRightOf="@+id/profile"
            android:fontFamily="@font/almendra_sc"
            android:text="9846513215"
            android:textColor="@color/Black"
            android:textSize="16dp"></TextView>


        <ImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="12dp"
            android:src="@drawable/ic_arrow_forward_black_24dp"></ImageView>


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp">

        <Button
            android:id="@+id/AboutUs"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:drawableLeft="@drawable/ic_settings_black_24dp"
            android:background="@drawable/background"
            android:text="About Us"
            android:textAlignment="textStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/Maps"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:drawableLeft="@drawable/ic_location_on_black_24dp"
            android:background="@drawable/background"
            android:text="Map"
            android:textAlignment="textStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativelayoutOut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/Logout"
            android:padding="10dp"
            android:drawableLeft="@drawable/ic_arrow_back_black_24dp"
            android:background="@drawable/background"
            android:text="Logout"
            android:textAlignment="textStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </RelativeLayout>

</LinearLayout>