<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#ffffff">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvApp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="FoodStation"
                android:textColor="@color/Red"
                android:fontFamily="@font/euphoria_script"
                android:textAllCaps="true"
                android:textSize="25dp"/>

            <ImageButton
                android:id="@+id/searchfood"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="180dp"
                android:background="#ffffff"
                android:src="@drawable/searchbar"/>

        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>

</LinearLayout>